Kubernetes/Ingress/Date/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ingress-date-service
  labels: 
    app: ingress-date-app
spec:
  type: ClusterIP
  selector:
    app: ingress-date-app
  ports:
    - port: 80
      targetPort: 80
