Kubernetes/Ingress/Date/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: date-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /date
        pathType: Prefix
        backend:
          service:
            name: ingress-date-service
            port:
              number: 80
